apps/servarr/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: servarr
  labels:
    app.kubernetes.io/name: bazarr
    app.kubernetes.io/part-of: servarr-stack
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: bazarr
  ports:
    - name: http
      port: 6767
      targetPort: http
      protocol: TCP
