apps/servarr/bazarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr
  namespace: servarr
  labels:
    app.kubernetes.io/name: bazarr
    app.kubernetes.io/part-of: servarr-stack
  annotations:
    external-dns.alpha.kubernetes.io/hostname: bazarr.lan
    external-dns.alpha.kubernetes.io/target: "192.168.68.62"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bazarr.lan`)
      kind: Rule
      middlewares:
        - name: lan-allowlist
          namespace: kube-system
      services:
        - name: bazarr
          port: 6767
  tls: {}
