apps/servarr/bazarr/authorizationpolicy.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: bazarr-allow-probes
  namespace: servarr
  labels:
    app.kubernetes.io/name: bazarr
    app.kubernetes.io/part-of: servarr-stack
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: bazarr-http
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: NetworkAuthentication
      name: kubelet-probes
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: bazarr-allow-traefik
  namespace: servarr
  labels:
    app.kubernetes.io/name: bazarr
    app.kubernetes.io/part-of: servarr-stack
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: bazarr-http
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: bazarr-traefik
